# docbr-pro

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
src/docbr_pro/: __init__.py  __main__.py
src/docbr_pro/api/: README.md  __init__.py  main.py
src/docbr_pro/batch/: __init__.py  processor.py  reader.py  writer.py
src/docbr_pro/cli/: __init__.py  main.py
src/docbr_pro/core/: __init__.py  cnpj.py  cpf.py  exceptions.py  generator.py  sanitizer.py
src/docbr_pro/enrichment/: __init__.py  brasilapi.py  cache.py
tests/: __init__.py
tests/batch/: test_batch.py
tests/core/: test_cnpj.py  test_cpf.py  test_generator.py  test_sanitizer.py
tests/enrichment/: test_brasilapi.py  test_cache.py
