[project]
name = "docbr-pro"
version = "0.1.0"
description = "A única ferramenta que valida, corrige, enriquece e processa CPF/CNPJ em massa — do terminal ou como biblioteca."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Leo Garcia", email = "leosg@example.com" }]
dependencies = [
    "pydantic>=2.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
    "pandas>=2.2.2",
]

[project.scripts]
docbr = "docbr_pro.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "hypothesis>=6.100.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "mkdocs-material>=9.5.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.mypy]
strict = true
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
